2010-03-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* configure.ac, test/pywbem/Makefile.am, test/pywbem/check_pywbem.py,
	  test/pywbem/ecn_interop.py:
	[ 2963601 ] pywbem tests

2010-03-01 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* args.c, array.c, constClass.c, instance.c, internalProvider.c, objectpath.c:
	[ 2948647 ] getObjectPath may dereference NULL pointer

2010-02-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBroker.c:
	[ 2958167 ] Remove USE_THREADS sections of httpAdapter

2010-02-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopServerProvider.c:
	[ 2949454 ] Memory leak in ServerProviderInitInstances()

2009-02-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2950773 ] Leak in indCIMXMLHandler.c

2010-02-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c:
	[ 2952912 ] resultSockets variable is not used threadsafe 
	(patch by Till Steinbach )

2010-02-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* internalProvider.c:
	[ 2952616 ] internalProvider is not Threadsafe
	(patch by Till Steinbach )

2010-02-10  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am:
	[ 2948812 ] footprint.pl missing from release tarball

2010-02-05  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 2946885 ] BEAM errors found in cimXmlGen

	* classProvider.c:
	[ 2946890 ] classProvider may try to closedir(NULL)

2010-02-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am:
	[ 2931327 ] sblim-sfcb-1.3.6 tarball is incomplete

2010-02-04  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* providerDrv.c:
	[ 2946101 ] possible race condition initializing providers

2010-02-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, elementCapabilitiesProvider.c:
	Cleaned up unused vars

	* interopProvider.c:
	[ 2945277 ] SFCB crashes on subscription without filter or handler prop 
	(patch by Klaus Kampf)
