@@ -1,3 +1,8 @@
+2010-03-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* Makefile.am in test subdirs
+	[ 2963746 ] Incorrect license in test makefiles
+
 2010-03-04  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* configure.ac, test/pywbem/Makefile.am, test/pywbem/check_pywbem.py,
